--- a/static/main.css
+++ b/static/main.css
@@ -1,36 +1,110 @@
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+.page-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.content-wrap {
+    flex: 1 0 auto;
+    justify-content: center;
+}
+
+.custom-footer {
+    background-color: lightcyan;
+    font-size: smaller;
+    flex-shrink: 0;
+}
+
 input:focus {
     border: 1px solid rgb(0, 134, 101);
 }
+
 .custom-header {
     background-color: rgb(0, 179, 134);
 }
-.custom-footer {
-    background-color: lightcyan;
-    font-size:smaller ;
-}
+
 .logo {
     margin-left: 20px;
-    height: 80px;
+    height: 60px;
 }
+
 .logo-heading {
-    font-size: 40px;
-    padding: 20px;
+    font-size: 30px;
+    padding: 10px;
     color: white;
 }
+
 .login-box {
-    background-color: rgb(233, 255, 248);
+    background-color: rgb(216, 255, 243);
 }
+
+.registration-box {
+    background-color: rgb(216, 255, 243);
+    margin-top: 2rem;
+    margin-bottom: 5rem;
+}
+
 .btn-custom {
     background-color: rgb(0, 179, 134);
     color: white;
+    padding: 10px 30px;
 }
+
 .btn-custom:hover {
     background-color: rgb(0, 134, 101);
     color: white;
 }
+
 .custom-link {
     text-decoration: none;
+    color: rgb(0, 134, 101);
 }
+
 .custom-link:hover {
-    text-decoration: underline; 
+    text-decoration: underline;
+    color: rgb(0, 179, 134);
+}
+
+.form-control:focus {
+    border-color: rgb(0, 134, 101);
+    box-shadow: 0 0 0 0.2rem rgba(0, 134, 101, 0.25);
+}
+
+.registration-box table td {
+    padding: 0.5rem;
+    vertical-align: middle;
+}
+
+.registration-box table td:first-child {
+    width: 50%;
+    text-align: right;
+    padding-right: 1rem;
+}
+
+.registration-box .form-label {
+    margin-bottom: 0;
+    color: rgb(0, 70, 64);
+    font-weight: 500;
+}
+
+.registration-box .form-control { 
+    padding: 0.5rem 0.75rem;
+    font-size: 1rem;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+}
+
+.registration-box .form-control:focus, .form-control:active {
+    border-color: rgb(0, 134, 101);
+    box-shadow: 0 0 0 0.2rem rgba(0, 134, 101, 0.25);
+}
+
+.required:after {
+    content: " *";
+    color: red;
 }
