--- a/templates/login.html
+++ b/templates/login.html
@@ -19,9 +19,9 @@
             <div class="text-center" style="font-size: smaller;">
                 <p>Don't have an account?
                 <br>
-                <a class="custom-link" href="#">Create a new Customer account</a>
+                <a class="custom-link" href="{{ url_for('customer_register') }}">Create a new Customer account</a>
                 <br>
-                <a class="custom-link" href="#">Create a new Service Provider account</a></p>
+                <a class="custom-link" href="{{ url_for('professional_register') }}">Create a new Service Provider account</a></p>
             </div>
         </form>
     </main>
