--- a/templates/professional_register.html
+++ b/templates/professional_register.html
@@ -62,7 +62,7 @@
             <div class="text-center" style="font-size: smaller;">
                 <p>Already have an account?
                 <br>
-                <a class="custom-link" href="#">Login here</a></p>
+                <a class="custom-link" href="{{ url_for('login') }}">Login here</a></p>
             </div>
         </form>
     </main>
