added controls for login and customer registration

--- a/templates/customer_register.html
+++ b/templates/customer_register.html
@@ -1,33 +1,37 @@
 {% extends "layout.html" %}
 {% block content %}
     <main class="w-100 m-auto mb-4 p-4 border shadow registration-box" style="max-width: 500px;">
-        <form>
+        <form action="" method="post">
             <h3 class="mb-4 text-center" style="color:rgb(0, 70, 64)">Customer Registration</h3>
 
             <table class="table-borderless">
                 <tr>
                     <td><label for="fullName" class="form-label">Full Name:</label></td>
-                    <td><input type="text" class="form-control" id="fullName" placeholder="Your Name" required></td>
+                    <td><input type="text" class="form-control" name="name" placeholder="Your Name" required></td>
                 </tr>
                 <tr>
                     <td><label for="email" class="form-label">Email:</label></td>
-                    <td><input type="email" class="form-control" id="email" placeholder="Your Email" required></td>
+                    <td><input type="email" class="form-control" name="email" placeholder="Your Email" required></td>
                 </tr>
                 <tr>
                     <td><label for="password" class="form-label">Password:</label><br><small style="font-size: smaller; color: rgb(0, 83, 76);;">(Must be 6-16 characters long)</small></td>
-                    <td><input type="password" class="form-control" id="password" minlength="6" maxlength="16" placeholder="Password" required></td>
+                    <td><input type="password" class="form-control" name="password" minlength="6" maxlength="16" placeholder="Password" required></td>
+                </tr>
+                <tr>
+                    <td><label for="confirmpassword" class="form-label">Confirm Password:</label></td>
+                    <td><input type="password" class="form-control" name="confirmpassword" minlength="6" maxlength="16" placeholder="Confirm Password" required></td>
                 </tr>
                 <tr>
                     <td><label for="mobile" class="form-label">Mobile Number:</label></td>
-                    <td><input type="tel" class="form-control" id="mobile" pattern="[0-9]{10}" placeholder="10-digit mobile number" required></td>
+                    <td><input type="tel" class="form-control" name="mobile" pattern="[0-9]{10}" placeholder="10-digit mobile number" required></td>
                 </tr>
                 <tr>
                     <td><label for="address" class="form-label">Address:</label></td>
-                    <td><textarea class="form-control" id="address" rows="2" required></textarea></td>
+                    <td><textarea class="form-control" name="address" rows="2" required></textarea></td>
                 </tr>
                 <tr>
                     <td><label for="pincode" class="form-label">Pincode:</label></td>
-                    <td><input type="text" class="form-control" id="pincode" pattern="[0-9]{6}" placeholder="123456" required></td>
+                    <td><input type="text" class="form-control" name="pincode" pattern="[0-9]{6}" placeholder="123456" required></td>
                 </tr>
             </table>
 
