--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,6 +29,14 @@
             </div>
         </header>
         <main class="content-wrap">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ category }} mx-auto w-50" role="alert">{{ msg }}</div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+
             {% block content %}
             {% endblock %}
         </main>
