--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,16 @@
 {% extends "layout.html" %}
 {% block content %}
     <main class="w-100 m-auto p-4 border shadow login-box" style="max-width: 350px;">
-        <form>
+        <form method="post">
             <h3 class="mb-3 text-center" style="color:rgb(0, 70, 64)">Login</h3>
 
             <div class="form-floating mb-3">               
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
+                <input type="email" class="form-control" name="email" id="floatingInput" placeholder="name@example.com" required>
                 <label for="floatingInput">Registered mail id</label>
 
             </div>
             <div class="form-floating mb-3">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" minlength="6" maxlength="16" required>
+                <input type="password" class="form-control" name="password" id="floatingPassword" placeholder="Password" minlength="6" maxlength="16" required>
                 <label for="floatingPassword">Password</label>
             </div>
 
