--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -36,9 +36,8 @@
                     </div>
                 </div>
             </nav>
-            <div class="welcome-message">
-            {% block welcome %}
-            {% endblock welcome %}
+            <div class="dashboard-message">
+            DASHBOARD
             </div>
         </header>
         <main class="content-wrap">
