--- a/static/main.css
+++ b/static/main.css
@@ -66,9 +66,9 @@ html, body {
     color: white;
 }
 
-.welcome-message {
+.dashboard-message {
     background-color: rgba(255, 255, 255, 0.521);
-    color: black;
+    color: rgb(0, 82, 75);
     font-size: 1.25rem;
     text-align: center;
     padding: 10px 0;
@@ -142,4 +142,8 @@ html, body {
 .required:after {
     content: " *";
     color: red;
+}
+
+.t-header {
+    background-color: #00b386 !important;
 }
