--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -1,8 +1,8 @@
 {% extends "layout2.html" %}
 {% block navbar %}
-<ul class="navbar-nav">
+<ul class="nav nav-underline">
     <li class="nav-item">
-        <a class="nav-link current" href="#">Home</a>
+        <a class="nav-link active" style="color:white;" href="#">Home</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="#">Search</a>
@@ -18,16 +18,16 @@
 
 {% block content %}
     <div class="container  table-responsive">
-    <h3 class="">Services</h3>
-    <table class="table table-hover">
-        <thead>
+    <h3 class="page-headings">Services</h3>
+    <table class="table table-hover align-middle">
+        <thead class="align-middle">
         <tr class="table-primary">
-            <th>ID</th>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Base Price (In Rupees)</th>
-            <th>Time Required</th>
-            <th>Action</th>
+            <th class="t-header" scope="col">ID</th>
+            <th class="t-header" scope="col">Name</th>
+            <th class="t-header" scope="col" style="width: 30%;">Description</th>
+            <th class="t-header" scope="col">Base Price (In Rupees)</th>
+            <th class="t-header" scope="col">Estimated Time Required</th>
+            <th class="t-header" scope="col">Action</th>
         </tr>
         </thead>
         
@@ -39,12 +39,247 @@
                 <td>{{ service.description }}</td>
                 <td>{{ service.price }}</td>
                 <td>{{ service.time_required }}</td>
-                <td><button type="button" class="btn m-1 btn-outline-primary btn-sm">Edit</button> <button class="btn btn-outline-danger btn-sm" type="button">Delete</button> </td>
+                <td>
+                    <a href="{{ url_for('edit_service', service_id=service.id) }}" class="btn m-1 btn-outline-primary btn-sm">Edit</a> 
+                    <a href="{{ url_for('delete_service', service_id=service.id) }}" class="btn btn-outline-danger btn-sm">Delete</a>
+                </td>
             </tr>
+
+            <!-- Edit Service Modal -->
+            {% if service_to_edit %}
+            <div class="modal show" id="editServiceModal" tabindex="-1" aria-labelledby="editServiceModalLabel" aria-hidden="true" style="display: block;">
+            <div class="modal-dialog">
+                <div class="modal-content shadow-lg custom-modal">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editServiceModalLabel">Edit Service</h5>
+                    <a href="{{ url_for('dashboard') }}" class="btn-close" aria-label="Close"></a>
+                </div>
+                <div class="modal-body">
+                    <form id="editServiceForm" method="POST" action="/edit_service">
+                    <input type="hidden" name="id" value="{{ service_to_edit.id }}">
+                    <div class="mb-3">
+                        <label for="serviceName" class="form-label">Service Name</label>
+                        <input type="text" class="form-control" id="serviceName" name="name" value="{{ service_to_edit.name }}" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="serviceDescription" class="form-label">Description</label>
+                        <textarea class="form-control" id="serviceDescription" name="description">{{ service_to_edit.description }}</textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="servicePrice" class="form-label">Base Price</label>
+                        <input type="number" class="form-control" id="servicePrice" name="price" value="{{ service_to_edit.price }}" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="serviceTime" class="form-label">Time Required</label>
+                        <input type="text" class="form-control" id="serviceTime" name="time_required" value="{{ service_to_edit.time_required }}">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    </form>
+                </div>
+                </div>
+            </div>
+            </div>
+            {% endif %}
+
+            <!-- Delete Service Modal -->
+            {% if delete_service %}
+            <div class="modal show" id="deleteServiceModal" tabindex="-1" aria-labelledby="deleteServiceModalLabel" aria-hidden="true" style="display: block;">
+            <div class="modal-dialog">
+                <div class="modal-content shadow-lg custom-modal">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteServiceModalLabel">Delete Service</h5>
+                    <a href="{{ url_for('dashboard') }}" class="btn-close" aria-label="Close"></a>
+                </div>
+                
+                <form id="deleteServiceForm" method="POST" action="/delete_service">
+                <div class="modal-body">
+                    <input type="hidden" name="id" value="{{ delete_service.id }}">
+                    <p>Are you sure you want to delete the service "{{ delete_service.name }}"?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </div>
+                </form>
+            </div>
+            </div>
+            {% endif %}
+
         {% endfor %}
         </tbody>
-
     </table>
-    <button type="button" class="btn btn-outline-success btn-sm col-md-2 offset-md-10">+ Add New Service</button>
+
+    <!-- Add New Service Button -->
+    <a href="{{ url_for('add_service') }}" class="btn btn-outline-success btn-sm col-md-2 offset-md-10">+ Add New Service</a>
+    </div>
+
+    
+    <!-- Add Service Modal -->
+    {% if add_service %}
+    <div class="modal show" id="addServiceModal" tabindex="-1" aria-labelledby="addServiceModalLabel" aria-hidden="true" style="display: block;">
+      <div class="modal-dialog">
+        <div class="modal-content shadow-lg custom-modal">
+          <div class="modal-header">
+            <h5 class="modal-title" id="addServiceModalLabel">Add New Service</h5>
+            <a href="{{ url_for('dashboard') }}" class="btn-close" aria-label="Close"></a>
+          </div>
+          
+          <form id="addServiceForm" method="POST" action="/add_service">
+          <div class="modal-body">
+              <div class="mb-3">
+                <label for="newServiceName" class="form-label">Service Name</label>
+                <input type="text" class="form-control" id="newServiceName" name="name" required>
+              </div>
+              <div class="mb-3">
+                <label for="newServiceDescription" class="form-label">Description</label>
+                <textarea class="form-control" id="newServiceDescription" name="description"></textarea>
+              </div>
+              <div class="mb-3">
+                <label for="newServicePrice" class="form-label">Base Price</label>
+                <input type="number" class="form-control" id="newServicePrice" name="price" required>
+              </div>
+              <div class="mb-3">
+                <label for="newServiceTime" class="form-label">Time Required</label>
+                <input type="text" class="form-control" id="newServiceTime" name="time_required">
+              </div>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-success">Add Service</button>
+          </div>
+        </form>
+        </div>
+      </div>
+    </div>
+    {% endif %}
+
+    <div class="container  table-responsive">
+        <h3 class="page-headings">Service Professionals</h3>
+        <table class="table table-hover align-middle">
+            <thead class="align-middle">
+            <tr class="table-primary">
+                <th class="t-header" scope="col">User ID</th>
+                <th class="t-header" scope="col">Photo</th>
+                <th class="t-header" scope="col">Name</th>
+                <th class="t-header" scope="col">Service_ID</th>
+                <th class="t-header" scope="col">Experience (In Years)</th>
+                <th class="t-header" scope="col">Identity-Proof</th>
+                <th class="t-header" scope="col">Certification(s)</th>
+                <th class="t-header" scope="col">Approval Status</th>
+                <th class="t-header" style="width: 18%;" scope="col">Action</th>
+            </tr>
+            </thead>
+            
+            <tbody class="table-group-divider">
+            {% for prof in professionals %}
+                <tr>
+                    <td scope="row">{{ prof.user_id }}</td>
+                    <td>
+                        <img src="{{ url_for('static', filename=prof.photo.split('static/')[1].replace('\\', '/')) }}" alt="Profile Photo" width="100">
+                    </td>
+                    <td>{{ prof.name }}</td>
+                    <td>{{ prof.service_id }}</td>
+                    <td>{{ prof.experience }}</td>
+                    <td><a href="{{ url_for('static', filename=prof.identity_proof.split('static/')[1].replace('\\', '/')) }}" target="_blank">View ID Proof</a></td>
+                    <td>
+                        {% if prof.certifications != None %}
+                        <a href="{{ url_for('static', filename=prof.certifications.split('static/')[1].replace('\\', '/')) }}" target="_blank">View Certifications</a>
+                        {% else %}
+                            No certifications uploaded
+                        {% endif %}
+                    </td>
+                    <td>
+                        {% if prof.is_approved %}
+                            Approved
+                        {% else %}
+                            Pending
+                        {% endif %}
+                    </td>
+                    <td>
+                        {% if prof.is_approved %}
+                            <a href="" class="btn m-1 btn-success btn-sm disabled">Approved</a>
+                        {% else %}
+                            <a href="{{ url_for('approve_professional', prof_id=prof.id) }}" class="btn m-1 btn-outline-primary btn-sm">Approve</a> 
+                        {% endif %}
+
+                        {% if prof.user_id not in blockedUsers %}
+                            <a href="{{ url_for('block_user', user_id=prof.user_id) }}" class="btn btn-outline-danger btn-sm">Block</a>
+                        {% else %}
+                            <a href="{{ url_for('unblock_user', user_id=prof.user_id) }}" class="btn btn-outline-success btn-sm">Unblock</a>
+                        {% endif %}
+                    </td>
+                </tr>                
+
+                <!-- Approve Professional Modal -->
+                {% if approve_professional %}
+                <div class="modal show" id="approveProfessionalModal" tabindex="-1" aria-labelledby="approveProfessionalModalLabel" aria-hidden="true" style="display: block;">
+                <div class="modal-dialog">
+                    <div class="modal-content shadow-lg custom-modal">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="approveProfessionalModalLabel">Approve Professional</h5>
+                        <a href="{{ url_for('dashboard') }}" class="btn-close" aria-label="Close"></a>
+                    </div>
+                    
+                    <form id="approveProfessionalForm" method="POST" action="/approve_professional">
+                    <div class="modal-body">
+                        <input type="hidden" name="prof_id" value="{{ approve_professional.id }}">
+                        <p>Are you sure you want to approve the Service Professional {{ approve_professional.name }}?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-success">Approve</button>
+                    </div>
+                    </form>
+                </div>
+                </div>
+                {% endif %}
+
+                <!-- Block User Modal -->
+                {% if block_user %}
+                <div class="modal show" id="blockUserModal" tabindex="-1" aria-labelledby="blockUserModalLabel" aria-hidden="true" style="display: block;">
+                <div class="modal-dialog">
+                    <div class="modal-content shadow-lg custom-modal">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="blockUserModalLabel">Block User</h5>
+                        <a href="{{ url_for('dashboard') }}" class="btn-close" aria-label="Close"></a>
+                    </div>
+                    
+                    <form id="blockUserForm" method="POST" action="/block_user">
+                    <div class="modal-body">
+                        <input type="hidden" name="user_id" value="{{ block_user.id }}">
+                        <p>Are you sure you want to block the User with ID <b>{{ block_user.id }}</b>?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-danger">Block</button>
+                    </div>
+                    </form>
+                </div>
+                </div>
+                {% endif %}
+
+                <!-- Unblock User Modal -->
+                {% if unblock_user %}
+                <div class="modal show" id="unblockUserModal" tabindex="-1" aria-labelledby="unblockUserModalLabel" aria-hidden="true" style="display: block;">
+                <div class="modal-dialog">
+                    <div class="modal-content shadow-lg custom-modal">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="unblockUserModalLabel">Unblock User</h5>
+                        <a href="{{ url_for('dashboard') }}" class="btn-close" aria-label="Close"></a>
+                    </div>
+                    
+                    <form id="unblockUserForm" method="POST" action="/unblock_user">
+                    <div class="modal-body">
+                        <input type="hidden" name="user_id" value="{{ unblock_user.id }}">
+                        <p>Are you sure you want to unblock the User with ID <b>{{ unblock_user.id }}</b>?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-success">Unblock</button>
+                    </div>
+                    </form>
+                </div>
+                </div>
+                {% endif %}
+
+            {% endfor %}
+            </tbody> 
+        </table>
+    </div>
 
 {% endblock %}
