--- a/templates/customer_dashboard.html
+++ b/templates/customer_dashboard.html
@@ -1,8 +1,8 @@
 {% extends "layout2.html" %}
 {% block navbar %}
-<ul class="navbar-nav">
+<ul class="nav nav-underline">
     <li class="nav-item">
-        <a class="nav-link current" href="#">Home</a>
+        <a class="nav-link active" style="color:white;" href="#">Home</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="#">Search</a>
@@ -10,9 +10,18 @@
     <li class="nav-item">
         <a class="nav-link" href="#">Summary</a>
     </li>
+    {% if current_user.is_authenticated %}
     <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
+        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
     </li>
+    {% else %}
+    <li class="nav-item">
+        <a href="{{ url_for('login') }}" class="nav-link">Login</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('customer_register') }}">Register</a>
+    </li>
+    {% endif %}
 </ul>
 {% endblock navbar %}
 
