--- a/templates/customer_register.html
+++ b/templates/customer_register.html
@@ -41,7 +41,10 @@
             <div class="text-center" style="font-size: smaller;">
                 <p>Already have an account?
                 <br>
-                <a class="custom-link" href="{{ url_for('login') }}">Login here</a></p>
+                <a class="custom-link" href="{{ url_for('login') }}">Login here</a><br>
+                <a class="custom-link" href="{{ url_for('professional_register')  }}">Click here to register as a Professional instead</a>
+                </p>
+
             </div>
         </form>
     </main>
