--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -36,9 +36,11 @@
                     </div>
                 </div>
             </nav>
+            {% if current_user.is_authenticated %}
             <div class="dashboard-message">
             DASHBOARD
             </div>
+            {% endif %}
         </header>
         <main class="content-wrap">
 
@@ -47,7 +49,7 @@
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                     {% for category, message in messages %}
-                        <div class="alert alert-{{ category }} alert-dismissible fade show m-auto mb-4 mt-0 w-50 d-flex align-items-center" role="alert">{{ message }}
+                        <div class="alert alert-{{ category }} alert-dismissible fade show m-auto mb-4 mt-0 w-100 d-flex align-items-center" role="alert">{{ message }}
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>
                     {% endfor %}
                 {% endif %}
