--- a/templates/professional_dashboard.html
+++ b/templates/professional_dashboard.html
@@ -1,8 +1,8 @@
 {% extends "layout2.html" %}
 {% block navbar %}
-<ul class="navbar-nav">
+<ul class="nav nav-underline">
     <li class="nav-item">
-        <a class="nav-link current" href="#">Home</a>
+        <a class="nav-link active" style="color:white;" href="#">Home</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="#">Search</a>
@@ -11,7 +11,7 @@
         <a class="nav-link" href="#">Summary</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
+        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
     </li>
 </ul>
 {% endblock navbar %}
