--- a/templates/customer_dashboard.html
+++ b/templates/customer_dashboard.html
@@ -1,4 +1,5 @@
 {% extends "layout2.html" %}
+
 {% block navbar %}
 <ul class="nav nav-underline">
     <li class="nav-item">
@@ -12,6 +13,9 @@
     </li>
     {% if current_user.is_authenticated %}
     <li class="nav-item">
+        <a href="{{ url_for('profile') }}" class="nav-link">Profile</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
     </li>
     {% else %}
@@ -24,6 +28,9 @@
     {% endif %}
 </ul>
 {% endblock navbar %}
+{% block dashboard_message %}
+    DASHBOARD
+{% endblock dashboard_message %}
 
 
 {% block content %}
