--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div class="page-container ">
+    <div class="page-container d-flex justify-content-center">
         <header class="mb-4 border-bottom shadow-sm custom-header w-100" style="height: fit-content;">
             <nav class="navbar navbar-expand-lg navbar-custom">
                 <div class="container-fluid">
@@ -38,10 +38,13 @@
             </nav>
             {% if current_user.is_authenticated %}
             <div class="dashboard-message">
-            DASHBOARD
+            {% block dashboard_message %}
+            {% endblock %}
             </div>
             {% endif %}
         </header>
+    
+
         <main class="content-wrap">
 
 
@@ -49,7 +52,7 @@
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                     {% for category, message in messages %}
-                        <div class="alert alert-{{ category }} alert-dismissible fade show m-auto mb-4 mt-0 w-100 d-flex align-items-center" role="alert">{{ message }}
+                        <div class="alert alert-{{ category }} alert-dismissible fade show m-auto mb-4 mt-0 w-80 d-flex align-items-center" role="alert">{{ message }}
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>
                     {% endfor %}
                 {% endif %}
@@ -58,10 +61,10 @@
             {% block content %}
             {% endblock %}
 
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         </main>
         <footer class="p-3 custom-footer">&copy; Copyright 2024, HomeEase Services. All rights reserved.</footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
