--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -9,7 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-
     {% if title %}
     <title>HomeEase Services - {{ title }}</title>
     {% else %}
@@ -20,11 +19,11 @@
 
 <body>
     <div class="page-container d-flex justify-content-center">
-        <header class="mb-4 border-bottom shadow-sm custom-header w-100" style="height: fit-content;">
+        <header class="mb-4 border-bottom shadow-sm custom-header w-100 container-fluid" style="height: min-content; width: 100vw;">
             <nav class="navbar navbar-expand-lg navbar-custom">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
-                        <img src="{{ url_for('static',filename='logo.png') }}" alt="Logo" height="40" class="logo">
+                    <a class="navbar-brand" href="{{ url_for('home') }}">
+                        <img src="{{ url_for('static',filename='logo.png') }}" alt="Logo" class="logo">
                         <span class="logo-heading">HomeEase Services</span>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +36,7 @@
                 </div>
             </nav>
             {% if current_user.is_authenticated %}
-            <div class="dashboard-message">
+            <div class="dashboard-message row justify-content-center">
             {% block dashboard_message %}
             {% endblock %}
             </div>
@@ -45,7 +44,7 @@
         </header>
     
 
-        <main class="content-wrap">
+        <main class="content-wrap w-100">
 
 
 
