--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,19 @@
 {% extends "layout.html" %}
+{% block navbar %}
+<ul class="nav nav-underline">
+    <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link active" style="color:white;" href="{{ url_for('login') }}">Login</a> 
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('customer_register') }}">Register</a>
+    </li>
+</ul>
+
+{% endblock navbar %}
+
 {% block content %}
     <main class="w-100 m-auto p-4 border shadow login-box" style="max-width: 350px;">
         <form method="post">
